[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "pybind11>=2.12.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*"
test-extras = "test"
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = [
    "yum update -y",
    "yum install -y mpfr-devel",
    "curl -LO https://github.com/boostorg/boost/releases/download/boost-1.86.0/boost-1.86.0-b2-nodocs.tar.xz",
    "tar -xf boost-1.86.0-b2-nodocs.tar.xz",
    "mv boost-1.86.0/boost /usr/include/",
    "curl -LO https://github.com/CGAL/cgal/releases/download/v5.6.1/CGAL-5.6.1-library.tar.xz",
    "tar -xf CGAL-5.6.1-library.tar.xz",
    "mv CGAL-5.6.1/include/CGAL /usr/include/",
]
# Skip musllinux builds for the moment
skip = "*-musllinux_*"
